tools/kustomize/overlays/prod/replicas_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
spec:
  replicas: 4
  template:
    spec:
      containers:
        - name: hello
          ports:
            - containerPort: 5679
